--- a/题目.md
+++ b/题目.md
@@ -10,16 +10,16 @@ XHTML的表现方式与HTML类似，但比HTML更加严格
 
 1.XHTML元素必须被正确嵌套
 
-2.XHTML元素必须被关闭
+2.XHTML元素必须被关闭 由开始标签和结束标签组成
 
-3.XHTML标签名必须小写
+3.XHTML标签名必须小写 属性必须有属性值
 
-4.XHTML必须有根元素
+4.XHTML必须有且唯一的根元素
 
 
 ## !DOCTYPE文档声明的作用
 
-H5不再是SGML的子集，所以H5不需要对DTD进行引用
+H5不再是SGML的子集，所以H5不需要对DTD（文档类型定义）进行引用
 
 H5的文档声明，声明当前网页是按照HTML5标准编写的
 
@@ -75,16 +75,16 @@ JS可通过元素的dataset属性对象以 驼峰命名 来访问
 
 meta常用于定义页面的说明，字符集，关键字、简介和其它的元数据。这些元数据将服务于浏览器（如何布局或重载页面），搜索引擎和其它网络服务。
 
-设置网页字符集
+设置网页字符集  
 `<meta charset="UTF-8" />`
 
-设置网页关键字
+设置网页关键字 不会在网页中显示  
 `<meta name="keywords" content="网页的关键字" />`
 
-设置网页的描述
+设置网页的描述 不会在网页中显示  
 `<meta name="description" content="网页的描述" />`
 
-设置viewport移动端视口
+设置viewport移动端视口  
 `<meta name="viewport" content="width=device-width, initial-scale=1">`
 
 搜索引擎在检索页面时会检索页面中的关键字和描述
