--- a/题目.md
+++ b/题目.md
@@ -1203,18 +1203,52 @@ A instanceof B
 2.遍历递归
 
 ```
-    function deepCopy(obj) {
-      if (typeof obj !== 'object' || obj === null) {
-        return obj
-      }
-      const result = obj instanceof Array ? [] : {}
-      for (const key in obj) {
-        if (obj.hasOwnProperty(key)) {
-          result[key] = deepCopy(obj[key])
+// 判断数据类型的函数
+        function checkType(target){
+            return Object.prototype.toString.call(target).slice(8,-1);
         }
-      }
-      return result
-    }
+
+        // console.log(checkType(obj3));
+
+        function clone(target) {
+            let result;
+            let targetType = checkType(target);
+            if(targetType === 'Object'){
+                result = {};
+
+            }
+            else if(targetType === 'Array'){
+                result = [];
+            }
+            else{
+                return target;
+            }
+
+
+            // 遍历目标
+            for(let i in target){
+                let value = target[i];
+                // target若为数组，则根据下标赋值给value
+                // target若为对象，target[i]代表对象中的i属性对应的属性值，赋值给value
+
+                // 判断目标结构的每一个值是否存在对象/数组（存在嵌套）
+                // [1,2,3,[1,2,3,[1,2]]]
+                if(checkType(value) === 'Object' || checkType(value) === 'Array'){
+                    result[i] = clone(value);
+                }
+                else{
+                    result[i] = value;
+                }
+            }
+            return result;
+        }
+        let arr000 = [1,2,[11,22,[111.222]]];
+        let arr001 = clone(arr000);
+        console.log(arr001);
+        arr001[2] = {name: 'jack',age: 11};
+        console.log(arr000,arr001);
+        // [1, 2, Array(3)]
+        // [1, 2, {…}]
 ```
 
 ## 如何判断是否是数组
