--- a/题目.md
+++ b/题目.md
@@ -624,6 +624,37 @@ viewport布局原理，改变CSS像素和物理像素的比例，不改变元素
     fn("a")("b")("c") // ["a", "b", "c"]
     fn("a")("b", "c") // ["a", "b", "c"]
 ```
+
+例
+```
+        function add(){
+            var args = [...arguments];
+
+            var adder = function(){
+                args.push(...arguments)
+                // 返回函数 收集传递的参数
+                return adder;
+            }
+
+            adder.toString = function(){
+                return args.reduce(function(a,b){
+                    return a+b;
+                },0)
+            }
+
+            return adder;
+        }
+
+        let a = add(1,2,3)
+        let b = add(1)(2)(3);
+        let c = add(1,2)(3);
+        console.log(a);
+        // 6
+        console.log(b);
+        // 6
+        console.log(c);
+        // 6
+```
 ## JS中为什么 0.1+0.2 !== 0.3
 
 JS中Number数据类型遵循IEEE 754标准
